--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chai": "^4.3.7",
     "jest": "26.6.3",
     "jsdoc": "^4.0.0",
+    "prettier": "^2.8.8",
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
