--- a/example/todo-app/package.json
+++ b/example/todo-app/package.json
@@ -10,13 +10,15 @@
     "@types/node": "^16.18.31",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/redux-logger": "^3.0.9",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "redux-rewire": "../../lib/esm"
+    "redux-logger": "^3.0.6",
+    "redux-rewire": "../../lib/esm",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
