Feat/rewire update (#7)
* feat(todo-app): todo app sample typescript added

* chore(prettier): prettier ran now

* fix(type): type updated for better usability

* feat(hook): parent key added in hook as feature

* feat(example): example updated with new redux rewire hooks update

* feat(redux-logger): redux logger added

* feat(package.json): stable version number update

* build(publish): unwanted post install in publish is removed

* build(package): version rectified

* refactor(useRewireState): hook renamed

* fix(reducer-args): args sequence updated

* build(package): version rectified

* fix(identity-reducer): identity reducer not working solved now

* build(package): version updated

* feat(readme): readme copy to publish

* fix(publish): depen make specific version number to avoid issues

--- a/example/todo-app/package.json
+++ b/example/todo-app/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^16.18.31",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/redux-logger": "^3.0.9",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "redux-logger": "^3.0.6",
+    "redux-rewire": "../../lib/esm",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +45,12 @@
     ]
   },
   "devDependencies": {
-    "@types/react-beautiful-dnd": "^13.1.4"
+    "@types/react-beautiful-dnd": "^13.1.4",
+    "typescript": "^4.9.5"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
   }
 }
