--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-rewire",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "State management library for react based applications",
   "main": "src/index.ts",
   "scripts": {
@@ -32,5 +32,9 @@
   },
   "peerDependencies": {
     "react": "18.x"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ds-fancode/redux-rewire"
   }
 }
