--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,7 @@ jobs:
 
       # Publish version to public repository
 #      - name: Publish
+#        working-directory: ./lib
 #        run: yarn publish --verbose --access public --tag ${{ env.RELEASE_TAG }}
 #        env:
 #          NODE_AUTH_TOKEN: ${{ secrets.NPMJS_ACCESS_TOKEN }}
