--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "redux": "^4.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
     "@types/chai": "^4.3.4",
     "@types/jest": "^29.2.4",
     "chai": "^4.3.7",
