--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.15",
   "description": "State management library for react based applications",
   "main": "src/index.ts",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "test:watch": "jest -- --watch",
@@ -30,7 +31,7 @@
     "jest": "26.6.3",
     "jsdoc": "^4.0.0",
     "prettier": "^2.8.8",
-    "typescript": "^4.9.4"
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "react": "18.x"
