--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "FanCode",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-react": "^7.22.15",
     "immer": "^9.0.12",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
