--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.15",
   "description": "State management library for react based applications",
   "main": "src/index.ts",
-  "type": "module",
   "scripts": {
     "test": "jest",
     "test:watch": "jest -- --watch",
@@ -12,7 +11,7 @@
     "lint:fix": "eslint --ext .ts,.tsx --fix",
     "prettier": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:fix": "prettier --write \"**/*.{ts,tsx}\"",
-    "build": "rm -rf ./lib && yarn tsc && yarn tsc --module CommonJS --outDir lib/cjs && node ./publish.js",
+    "build": "rm -rf ./lib && yarn tsc && yarn tsc --module CommonJS --moduleResolution node --outDir lib/cjs && node ./publish.js",
     "postinstall": "yarn build"
   },
   "author": "FanCode",
