--- a/package.json
+++ b/package.json
@@ -11,24 +11,27 @@
     "lint:fix": "eslint --ext .ts,.tsx --fix",
     "prettier": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:fix": "prettier --write \"**/*.{ts,tsx}\"",
-    "build": "rm -rf ./lib && yarn tsc && yarn tsc --module CommonJS --outDir lib/cjs && node ./publish.js",
+    "build": "rm -rf ./lib && yarn tsc && yarn tsc --module CommonJS --moduleResolution node --outDir lib/cjs && node ./publish.js",
     "postinstall": "yarn build"
   },
   "author": "FanCode",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-react": "^7.22.15",
     "immer": "^9.0.12",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
     "@types/chai": "^4.3.4",
     "@types/jest": "^29.2.4",
     "chai": "^4.3.7",
     "jest": "26.6.3",
     "jsdoc": "^4.0.0",
     "prettier": "^2.8.8",
-    "typescript": "^4.9.4"
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "react": "18.x"
