chore: added pat for workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Checkout branch
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT_GITHUB_ACTION }}
 
       - uses: actions/setup-node@v3
         with:
