--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: release package
 on:
   workflow_dispatch:
+    branches:
+      - main
     inputs:
       release-type:
         description: 'Release type (one of): patch, minor, major, prepatch, preminor, premajor, prerelease'
@@ -68,8 +70,11 @@ jobs:
           git push origin && git push --tags
 
       # Publish version to public repository
-#      - name: Publish
-#        working-directory: ./lib
-#        run: yarn publish --verbose --access public --tag ${{ env.RELEASE_TAG }}
-#        env:
-#          NODE_AUTH_TOKEN: ${{ secrets.NPMJS_ACCESS_TOKEN }}
+      - name: Building Package
+        run: yarn build
+
+      - name: Publish
+        working-directory: ./lib
+        run: yarn publish --verbose --access public --tag ${{ env.RELEASE_TAG }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN_REDUX_REWIRE }}
