--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
           cache: yarn
       - name: Installing dependencies
         run: yarn install --frozen-lockfile # for installing on CI
-        
+
       - name: Bump release version
         if: startsWith(github.event.inputs.release-type, 'pre') != true
         run: |
@@ -77,6 +77,6 @@ jobs:
       # Publish version to public repository
       - name: Publish
         working-directory: ./lib
-        run: yarn publish --verbose --access public --tag ${{ env.RELEASE_TAG }}
+        run: npm publish --verbose --access public --tag ${{ env.RELEASE_TAG }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN_REDUX_REWIRE }}
