--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.16.0
+          registry-url: 'https://registry.npmjs.org'
           cache: yarn
       - name: Installing dependencies
         run: yarn install --frozen-lockfile # for installing on CI
