fix: removed unnecessary dependencies from api

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ lib
 .DS_Store
 build
 .docusaurus
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+!.yarnrc.yml
