--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:fix": "prettier --write \"**/*.{ts,tsx}\"",
     "build": "rm -rf ./lib && yarn tsc && yarn tsc --module CommonJS --moduleResolution node --outDir lib/cjs && node ./publish.js",
+    "clean-node-modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name 'build' -type d -prune -exec rm -rf '{}' +",
     "postinstall": "yarn build"
   },
   "author": "FanCode",
@@ -27,17 +28,25 @@
     "@babel/preset-typescript": "^7.23.2",
     "@types/chai": "^4.3.4",
     "@types/jest": "^29.2.4",
+    "@types/react": "^18.2.6",
     "chai": "^4.3.7",
     "jest": "26.6.3",
     "jsdoc": "^4.0.0",
     "prettier": "^2.8.8",
+    "react": "^18.2.0",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "react": "18.x"
   },
+  "workspaces": [
+    "example/*",
+    "packages/*",
+    "documentation"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/ds-fancode/redux-rewire"
-  }
+  },
+  "packageManager": "yarn@4.3.1"
 }
