--- a/example/todo-app/tsconfig.json
+++ b/example/todo-app/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "target": "ES2015",
     "module": "ES2020",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -20,18 +16,9 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "redux-rewire": [
-        "../../src"
-      ]
+      "redux-rewire": ["../../src"]
     }
   },
-  "include": [
-    "src",
-    "../../lib/esm"
-  ],
-  "exclude": [
-    "**/__tests__/*",
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src", "../../lib/esm"],
+  "exclude": ["**/__tests__/*", "node_modules", "dist"]
 }
