--- a/example/todo-app/tsconfig.json
+++ b/example/todo-app/tsconfig.json
@@ -19,6 +19,6 @@
       "redux-rewire": ["../../src"]
     }
   },
-  "include": ["src", "../../lib/esm"],
+  "include": ["src", "../../src"],
   "exclude": ["**/__tests__/*", "node_modules", "dist"]
 }
