--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "jsdoc": "^4.0.0",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "5.4.2"
   },
   "peerDependencies": {
     "react": "18.x"
