--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "redux-rewire",
+  "name": "@redux-rewire/core",
   "version": "0.0.16",
   "description": "State management library for react based applications",
+  "main": "src/index.ts",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest -- --watch",
-    "test:ci": "jest --coverage && coveralls < coverage/lcov.info",
+    "test-watch": "jest -- --watch",
+    "test-ci": "jest --coverage && coveralls < coverage/lcov.info",
     "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint --ext .ts,.tsx --fix",
+    "lint-fix": "eslint --ext .ts,.tsx --fix",
     "prettier": "prettier --check \"**/*.{ts,tsx}\"",
-    "prettier:fix": "prettier --write \"**/*.{ts,tsx}\"",
+    "prettier-fix": "prettier --write \"**/*.{ts,tsx}\"",
     "build": "rm -rf ./lib && yarn tsc && yarn tsc --module CommonJS --moduleResolution node --outDir lib/cjs && node ./publish.js",
     "clean-node-modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name 'build' -type d -prune -exec rm -rf '{}' +",
     "postinstall": "yarn build"
@@ -17,35 +18,21 @@
   "author": "FanCode",
   "license": "ISC",
   "dependencies": {
-    "@babel/preset-react": "^7.22.15",
-    "immer": "^9.0.12",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "immer": "^9.0.12"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-typescript": "^7.23.2",
     "@types/chai": "^4.3.4",
     "@types/jest": "^29.2.4",
-    "@types/react": "^18.2.6",
     "chai": "^4.3.7",
     "jest": "26.6.3",
     "jsdoc": "^4.0.0",
     "prettier": "^2.8.8",
-    "react": "^18.2.0",
     "typescript": "5.4.2"
   },
-  "peerDependencies": {
-    "react": "18.x"
-  },
-  "workspaces": [
-    "example/*",
-    "packages/*",
-    "documentation"
-  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/ds-fancode/redux-rewire"
-  },
-  "packageManager": "yarn@4.3.1"
+  }
 }
