--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -7,10 +7,13 @@
     "lib": [
       "es2022"
     ],
+    "rootDir": "src",
+    "baseUrl": "src",
+    "composite": true,
     "declaration": true,
     "incremental": true,
-    "rootDir": "src",
-    "baseUrl": "src"
+    "declarationMap": true,
+    "sourceMap": true,
   },
   "include": [
     "src"
