--- a/example/todo-app/package.json
+++ b/example/todo-app/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-rewire/core": "workspace:*",
+    "@redux-rewire/react": "workspace:*",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.31",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
     "@types/redux-logger": "^3.0.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
-    "web-vitals": "^2.1.4"
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -40,9 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "typescript": "^5.2.2"
   },
   "babel": {
     "presets": [
