--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jsdoc": "^4.0.0",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
-    "typescript": "5.4.2",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^7.3.1"
   },
   "workspaces": [
