--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,12 +28,13 @@
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.2",
+    "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.2.4",
     "@types/react": "^18.2.6",
     "jest": "26.6.3",
     "jsdoc": "^4.0.0",
     "react": "^18.2.0",
-    "typescript": "5.4.2"
+    "typescript": "^5.7.2"
   },
   "peerDependencies": {
     "react": "18.x",
