--- a/example/ssr-app/package.json
+++ b/example/ssr-app/package.json
@@ -1,1 +1,38 @@
-{}
+{
+  "name": "ssr-app",
+  "type": "commonjs",
+  "scripts": {
+    "start": "NODE_ENV=development webpack --watch",
+    "build": "NODE_ENV=production webpack --production"
+  },
+  "dependencies": {
+    "@redux-rewire/core": "workspace:*",
+    "@redux-rewire/react": "workspace:*",
+    "express": "^4.21.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "styled-components": "^6.1.14"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@types/babel__preset-env": "^7",
+    "@types/babel__register": "^7",
+    "@types/express": "^4",
+    "@types/ignore-styles": "^5",
+    "@types/react": "19.0.7",
+    "@types/react-dom": "19.0.3",
+    "@types/webpack-node-externals": "^3",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
+    "mini-css-extract-plugin": "^2.9.2",
+    "style-loader": "^4.0.0",
+    "typescript": "5.7.2",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-stats-plugin": "^1.1.3"
+  }
+}
