--- a/example/todo-app/package.json
+++ b/example/todo-app/package.json
@@ -5,10 +5,8 @@
   "dependencies": {
     "@redux-rewire/core": "workspace:*",
     "@redux-rewire/react": "workspace:*",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-icons": "^4.8.0",
     "web-vitals": "^2.1.4"
   },
@@ -21,7 +19,7 @@
     "@types/redux-logger": "^3.0.9",
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
-    "typescript": "^5.2.2"
+    "typescript": "5.7.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
