--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "jest": "26.6.3",
     "jsdoc": "^4.0.0",
     "prettier": "^3.2.5",
-    "react": "^18.2.0",
-    "typescript": "^5.7.2",
+    "typescript": "5.7.2",
     "typescript-eslint": "^7.3.1"
   },
   "workspaces": [
@@ -39,6 +38,13 @@
     "packages/*",
     "documentation"
   ],
+  "resolutions": {
+    "typescript": "5.7.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "@types/react": "19.0.7",
+    "@types/react-dom": "19.0.3"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ds-fancode/redux-rewire"
