--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,7 +29,7 @@
     "@babel/preset-typescript": "^7.23.2",
     "@types/jest": "^29.2.4",
     "jsdoc": "^4.0.0",
-    "typescript": "^5.7.2"
+    "typescript": "5.7.2"
   },
   "repository": {
     "type": "git",
