--- a/packages/legacy/package.json
+++ b/packages/legacy/package.json
@@ -29,15 +29,14 @@
     "@babel/preset-typescript": "^7.23.2",
     "@types/chai": "^4.3.4",
     "@types/jest": "^29.2.4",
-    "@types/react": "^18.2.6",
     "chai": "^4.3.7",
     "jest": "26.6.3",
     "jsdoc": "^4.0.0",
-    "react": "^18.2.0",
-    "typescript": "5.4.2"
+    "react": "19.0.0",
+    "typescript": "5.7.2"
   },
   "peerDependencies": {
-    "react": "18.x"
+    "react": ">=18.x"
   },
   "repository": {
     "type": "git",
