--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -33,11 +33,11 @@
     "@types/react": "^18.2.6",
     "jest": "26.6.3",
     "jsdoc": "^4.0.0",
-    "react": "^18.2.0",
-    "typescript": "^5.7.2"
+    "react": "19.0.0",
+    "typescript": "5.7.2"
   },
   "peerDependencies": {
-    "react": "18.x",
+    "react": ">=18.x",
     "redux": "^4.2.0"
   },
   "repository": {
