--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "26.6.3",
+    "jest": "^29.7.0",
     "jsdoc": "^4.0.0",
     "prettier": "^3.2.5",
+    "ts-jest": "^29.2.5",
     "typescript": "5.7.2",
     "typescript-eslint": "^7.3.1"
   },
