--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,7 +13,7 @@
     "lint-fix": "yarn lint --fix",
     "prettier-check": "yarn run -T prettier --check \"**/*.{ts,tsx}\"",
     "prettier-fix": "yarn prettier-check --write \"**/*.{ts,tsx}\"",
-    "build": "rm -rf ./lib && yarn tsc && yarn tsc --module CommonJS --verbatimModuleSyntax false --moduleResolution node --outDir lib/cjs",
+    "build": "rm -rf ./lib && yarn run -T tsc && yarn run -T tsc --module CommonJS --verbatimModuleSyntax false --moduleResolution node --outDir lib/cjs",
     "publish": "yarn build && node ./publish.js",
     "clean-node-modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name 'build' -type d -prune -exec rm -rf '{}' +",
     "postinstall": "yarn build"
