--- a/packages/legacy/package.json
+++ b/packages/legacy/package.json
@@ -11,7 +11,7 @@
     "lint-fix": "yarn lint --fix",
     "prettier-check": "yarn run -T prettier --check \"**/*.{ts,tsx}\"",
     "prettier-fix": "yarn prettier-check --write \"**/*.{ts,tsx}\"",
-    "build": "rm -rf ./lib && yarn tsc && yarn tsc --module CommonJS --moduleResolution node --outDir lib/cjs",
+    "build": "rm -rf ./lib && yarn run -T tsc && yarn run -T tsc --module CommonJS --moduleResolution node --outDir lib/cjs",
     "publish": "yarn build && node ./publish.js",
     "clean-node-modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name 'build' -type d -prune -exec rm -rf '{}' +",
     "postinstall": "yarn build"
@@ -30,10 +30,7 @@
     "@types/chai": "^4.3.4",
     "@types/jest": "^29.2.4",
     "chai": "^4.3.7",
-    "jest": "26.6.3",
-    "jsdoc": "^4.0.0",
-    "react": "19.0.0",
-    "typescript": "5.7.2"
+    "react": "19.0.0"
   },
   "peerDependencies": {
     "react": ">=18.x"
