--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,19 +2,19 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "lib/esm",
-    "sourceMap": true,
-    "lib": [
-      "es2022",
-      "dom"
-    ],
     "rootDir": "src",
+    "baseUrl": "src",
+    "lib": ["es2022", "dom"],
     "jsx": "react",
-    "baseUrl": "src"
+    "sourceMap": true,
+    "paths": {
+//      "@redux-rewire/core": ["../core/src/index.ts"]
+    }
   },
-  "references": [{
-    "path": "../core"
-  }],
-  "include": [
-    "src"
-  ]
+  "references": [
+    {
+      "path": "../core"
+    }
+  ],
+  "include": ["src"]
 }
