--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint-fix": "yarn workspaces foreach -Ap run lint-fix",
     "prettier-check": "yarn workspaces foreach -Ap run prettier-check",
     "prettier-fix": "yarn workspaces foreach -Ap run prettier-fix",
-    "clean-node-modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name 'build' -type d -prune -exec rm -rf '{}' +"
+    "clean-repo": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name 'build' -type d -prune -exec rm -rf '{}' +"
   },
   "author": "FanCode",
   "license": "ISC",
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdoc": "^4.0.0",
     "prettier": "^3.2.5",
     "typescript": "5.7.2",
@@ -40,6 +41,8 @@
   ],
   "resolutions": {
     "typescript": "5.7.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "@types/react": "19.0.7",
