--- a/example/ssr-app/package.json
+++ b/example/ssr-app/package.json
@@ -23,10 +23,12 @@
     "@types/ignore-styles": "^5",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
+    "@types/redux-logger": "^3.0.9",
     "@types/webpack-node-externals": "^3",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "mini-css-extract-plugin": "^2.9.2",
+    "redux-logger": "^3.0.6",
     "style-loader": "^4.0.0",
     "typescript": "5.7.2",
     "webpack": "^5.97.1",
