fix: changed package names

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,8 @@
 nodeLinker: node-modules
 enableGlobalCache: true
 enableConstraintsChecks: true
+npmScopes:
+  "ds-fancode":
+    npmRegistryServer: "https://npm.pkg.github.com"
+    npmAlwaysAuth: true
+    npmAuthToken: ${GH_TOKEN}
