--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,22 +2,18 @@
   "compilerOptions": {
     "moduleResolution": "bundler",
     "module": "ES2022",
-    "outDir": "lib/esm",
-    "lib": [
-      "es2022"
-    ],
+    "lib": ["es2022"],
     "target": "es2022",
     "moduleDetection": "force",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "verbatimModuleSyntax": true,
-    "allowJs": false,
+    "allowJs": true,
     "resolveJsonModule": true,
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "sourceMap": true,
     "declaration": true,
-    "incremental": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
