--- a/example/ssr-app/package.json
+++ b/example/ssr-app/package.json
@@ -6,8 +6,8 @@
     "build": "NODE_ENV=production webpack --production"
   },
   "dependencies": {
-    "@redux-rewire/core": "workspace:*",
-    "@redux-rewire/react": "workspace:*",
+    "@ds-fancode/redux-rewire-core": "workspace:*",
+    "@ds-fancode/redux-rewire-react": "workspace:*",
     "express": "^4.21.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
