--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.2",
     "@eslint/js": "^8.57.0",
+    "@release-it/conventional-changelog": "^10.0.1",
     "@types/jest": "^29.2.4",
     "@types/react": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
@@ -31,6 +32,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "jsdoc": "^4.0.0",
     "prettier": "^3.2.5",
+    "release-it": "^19.0.4",
+    "tsup": "^8.5.0",
     "typescript": "5.7.2",
     "typescript-eslint": "^7.3.1"
   },
