--- a/packages/legacy/package.json
+++ b/packages/legacy/package.json
@@ -2,7 +2,9 @@
   "name": "@redux-rewire/legacy",
   "version": "0.0.16",
   "description": "State management library for react based applications",
-  "main": "src/index.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
   "scripts": {
     "test": "yarn run -T jest",
     "test-watch": "yarn test -- --watch",
@@ -11,7 +13,8 @@
     "lint-fix": "yarn lint --fix",
     "prettier-check": "yarn run -T prettier --check \"**/*.{ts,tsx}\"",
     "prettier-fix": "yarn prettier-check --write \"**/*.{ts,tsx}\"",
-    "build": "rm -rf ./lib && yarn run -T tsc && yarn run -T tsc --module CommonJS --moduleResolution node --outDir lib/cjs",
+    "clean": "rm -rf ./lib ./dist",
+    "build": "yarn clean && yarn run -T tsup",
     "publish": "yarn build && node ./publish.js",
     "clean-node-modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name 'build' -type d -prune -exec rm -rf '{}' +",
     "postinstall": "yarn build"
