--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@redux-rewire/react",
+  "name": "@ds-fancode/redux-rewire-react",
   "version": "0.0.16",
   "description": "State management library for react based applications",
   "main": "lib/cjs/index.js",
-  "module": "lib/esm/index.js",
-  "types": "lib/esm/index.d.ts",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
   "scripts": {
     "test": "yarn run -T jest",
     "test-watch": "yarn test -- --watch",
@@ -13,15 +13,15 @@
     "lint-fix": "yarn lint --fix",
     "prettier-check": "yarn run -T prettier --check \"**/*.{ts,tsx}\"",
     "prettier-fix": "yarn prettier-check --write \"**/*.{ts,tsx}\"",
-    "build": "rm -rf ./lib && yarn run -T tsc && yarn run -T tsc --module CommonJS --moduleResolution node --outDir lib/cjs",
+    "clean": "rm -rf ./lib ./dist",
+    "build": "yarn clean && yarn run -T tsup",
     "publish": "yarn build && node ./publish.js",
-    "clean-node-modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name 'build' -type d -prune -exec rm -rf '{}' +",
-    "postinstall": "yarn build"
+    "clean-node-modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name 'build' -type d -prune -exec rm -rf '{}' +"
   },
   "author": "FanCode",
   "license": "ISC",
   "dependencies": {
-    "@redux-rewire/core": "workspace:*",
+    "@ds-fancode/redux-rewire-core": "workspace:*",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
@@ -41,5 +41,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ds-fancode/redux-rewire"
-  }
+  },
+  "sideEffects": false
 }
