--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,4 +5,4 @@ npmScopes:
   "ds-fancode":
     npmRegistryServer: "https://npm.pkg.github.com"
     npmAlwaysAuth: true
-    npmAuthToken: ${GH_TOKEN}
+    npmAuthToken: ${GH_TOKEN:-placeholder_token}
