fix: changed package names

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,6 +1,8 @@
 nodeLinker: node-modules
 enableGlobalCache: true
 enableConstraintsChecks: true
+injectEnvironmentFiles:
+  - ".env?"
 npmScopes:
   "ds-fancode":
     npmRegistryServer: "https://npm.pkg.github.com"
