--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,15 +7,23 @@ on:
       release-type:
         description: 'Release type (one of): patch, minor, major, prepatch, preminor, premajor, prerelease'
         type: choice
-        default: "prerelease"
+        default: 'prerelease'
         options:
-          - "patch"
-          - "minor"
-          - "major"
-          - "prepatch"
-          - "preminor"
-          - "premajor"
-          - "prerelease"
+          - 'patch'
+          - 'minor'
+          - 'major'
+          - 'prepatch'
+          - 'preminor'
+          - 'premajor'
+          - 'prerelease'
+        required: true
+      package-name:
+        description: 'Select the package to publish'
+        type: choice
+        default: 'core'
+        options:
+          - 'react'
+          - 'core'
         required: true
 jobs:
   release:
@@ -77,7 +85,6 @@ jobs:
 
       # Publish version to public repository
       - name: Publish
-        working-directory: ./lib
         run: npm publish --verbose --access public --tag ${{ env.RELEASE_TAG }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN_REDUX_REWIRE }}
