--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint-fix": "yarn workspaces foreach -Ap run lint-fix",
     "prettier-check": "yarn workspaces foreach -Ap run prettier-check",
     "prettier-fix": "yarn workspaces foreach -Ap run prettier-fix",
+    "build-all": "yarn workspace @ds-fancode/redux-rewire-core build && yarn workspace @ds-fancode/redux-rewire-react build",
     "clean-repo": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name 'build' -type d -prune -exec rm -rf '{}' +"
   },
   "author": "FanCode",
