--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ds-fancode/redux-rewire-core",
-  "version": "0.0.16",
+  "version": "0.0.17-beta.4",
   "description": "State management library for react based applications",
   "author": "FanCode",
   "license": "ISC",
