--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -8,8 +8,7 @@
     "declaration": true,
     "incremental": true,
     "declarationMap": true,
-    "sourceMap": true,
-    "noEmit": false
+    "sourceMap": true
   },
   "include": ["src/**/*"]
 }
