--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ds-fancode/redux-rewire-core",
-  "version": "0.0.17-beta.8",
+  "version": "0.0.17-beta.9",
   "description": "State management library for react based applications",
   "author": "FanCode",
   "license": "ISC",
@@ -55,8 +55,8 @@
     "clean-node-modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name 'build' -type d -prune -exec rm -rf '{}' +"
   },
   "dependencies": {
-    "mutative": "^1.2.0",
-    "redux": "^5.0.1"
+    "mutative": "1.2.0",
+    "redux": "5.0.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.2",
