fix: g store issues

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -61,12 +61,12 @@
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.2.4",
     "@types/react": "^18.2.6",
-    "react": "19.0.0",
+    "react": "19.2.1",
     "typescript": "5.7.2"
   },
   "peerDependencies": {
     "@ds-fancode/redux-rewire-core": "*",
-    "react": ">=18.x"
+    "react": ">=19.2.1"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
