--- a/example/ssr-app/tsconfig.json
+++ b/example/ssr-app/tsconfig.json
@@ -5,7 +5,6 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "jsx": "react",
-
     "allowJs": true,
     "moduleDetection": "force",
     "verbatimModuleSyntax": true,
@@ -15,11 +14,11 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "paths": {
+      "@ds-fancode/redux-rewire-core": ["../../packages/core/src"],
+      "@ds-fancode/redux-rewire-react": ["../../packages/react/src"]
+    }
   },
-  "references": [
-    {"path": "../../packages/react"},
-    {"path": "../../packages/core"}
-  ],
   "include": ["src"]
 }
