--- a/packages/legacy/package.json
+++ b/packages/legacy/package.json
@@ -65,11 +65,11 @@
     "@types/chai": "^4.3.4",
     "@types/jest": "^29.2.4",
     "chai": "^4.3.7",
-    "react": "19.0.0"
+    "react": "19.2.1"
   },
   "peerDependencies": {
     "@ds-fancode/redux-rewire-core": "*",
-    "react": ">=18.x"
+    "react": ">=19.2.1"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
