--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
           node-version: 16.16.0
           cache: yarn
 
+      - name: Enable Corepack
+        run: corepack enable
+
       - name: Installing dependencies
         run: yarn install --immutable
 
